--- a/index.html
+++ b/index.html
@@ -15,22 +15,53 @@
         <header id="header">
             <div class="outer">
                 <div class="row">
-                    <div class="membership">
-                        <a href="#none">HOME</a>
-                        <a href="#none">로그인</a>
-                        <a href="#none">회원가입</a>
-                    </div>
+                    <a href="#none"><i class="fas fa-home"></i> HOME</a>
+                    <a href="#none"><i class="fas fa-lock"></i> 로그인</a>
+                    <a href="#none"><i class="fas fa-sign-in-alt"></i> 회원가입</a>
                 </div>
             </div>
             <div class="row cf">
-                <h1><a href="#none"><img src="./img/logo.png" alt="디자인코코"></a></h1>
+                <h1><a href="/index.html"><img src="./img/logo.png" alt="디자인코코"></a></h1>
                     <nav id="nav">
                         <ul class="depth1">
-                            <li><a href="#none">회사소개</a></li>
-                            <li><a href="#none">사업소개</a></li>
-                            <li><a href="#none">제품소개</a></li>
-                            <li><a href="#none">고객센터</a></li>
-                            <li><a href="#none">커뮤니티</a></li>
+                            <li><a href="#none">회사소개</a>
+                                <ul class="depth2">
+                                    <li><a href="#none">회사소개</a></li>
+                                    <li><a href="#none">CEO인사말</a></li>
+                                    <li><a href="#none">회사연혁</a></li>
+                                    <li><a href="#none">오시는 길</a></li>
+                                </ul>
+                            </li>
+                            <li><a href="#none">사업소개</a>
+                                <ul class="depth2">
+                                    <li><a href="#none">사업분야</a></li>
+                                    <li><a href="#none">사업분야2</a></li>
+                                    <li><a href="#none">인증서</a></li>
+                                    <li><a href="#none">파트너</a></li>
+                                </ul>
+                            </li>
+                            <li><a href="#none">제품소개</a>
+                                <ul class="depth2">
+                                    <li><a href="#none">제품01</a></li>
+                                    <li><a href="#none">제품02</a></li>
+                                    <li><a href="#none">제품03</a></li>
+                                    <li><a href="#none">제품04</a></li>
+                                    <li><a href="#none">제품05</a></li>
+                                </ul>
+                            </li>
+                            <li><a href="#none">고객센터</a>
+                                <ul class="depth2">
+                                    <li><a href="#none">고객상담</a></li>
+                                    <li><a href="#none">문의게시판</a></li>
+                                    <li><a href="#none">공지사항</a></li>
+                                </ul>
+                            </li>
+                            <li><a href="#none">커뮤니티</a>
+                                <ul class="depth2">
+                                    <li><a href="#none">FAQ</a></li>
+                                    <li><a href="#none">이벤트</a></li>
+                                </ul>
+                            </li>
                         </ul>
                     </nav>
             </div>
@@ -38,10 +69,26 @@
         <section id="section">
             <article class="article1">
                 <div class="slide">
-                    <div class="slidetext">
-                        <p>기술과 경험의 융합, 미래를 위한 변화</p>
-                        <p>당신과 함께하는 좋은 파트너가 되고 싶습니다.<br>최고의 전문성과 신뢰를 바탕으로 함께 성장해 나가겠습니다.</p>
-                        <p><a href="#none">바로가기</a></p>
+                    <div class="slide1">
+                        <div class="slidetext">
+                            <h2>WE ARE CREATIVE</h2>
+                            <p>당신과 함께하는 좋은 파트너가 되고 싶습니다.<br>최고의 전문성과 신뢰를 바탕으로 함께 성장해 나가겠습니다.</p>
+                            <a href="#none">바로가기</a>
+                        </div>
+                    </div>
+                    <div class="slide2">
+                        <div class="slidetext">
+                            <h2>자연에 가치를 더하다</h2>
+                            <p>당신과 함께하는 좋은 파트너가 되고 싶습니다.<br>최고의 전문성과 신뢰를 바탕으로 함께 성장해 나가겠습니다.</p>
+                            <a href="#none">바로가기</a>
+                        </div>
+                    </div>
+                    <div class="slide3">
+                        <div class="slidetext">
+                            <h2>기술과 경험의 융합, 미래를 위한 변화</h2>
+                            <p>당신과 함께하는 좋은 파트너가 되고 싶습니다.<br>최고의 전문성과 신뢰를 바탕으로 함께 성장해 나가겠습니다.</p>
+                            <a href="#none">바로가기</a>
+                        </div>
                     </div>
                 </div>
             </article>
@@ -55,28 +102,28 @@
                         <div class="imgtext">
                             <h3>회사소개</h3>
                             <p>주변환경을 생각하는 개발 소비자의 품격 있는 삶을 위한 주거문화 창달에 노력하고 있습니다.</p>
-                            <p><a href="#none">DETAIL VIEW</a></p>
+                            <a href="#none">DETAIL VIEW</a>
                         </div>
                     </div>
                     <div class="img2">
                         <div class="imgtext">
                             <h3>사업분야</h3>
                             <p>주변환경을 생각하는 개발 소비자의 품격 있는 삶을 위한 주거문화 창달에 노력하고 있습니다.</p>
-                            <p><a href="#none">DETAIL VIEW</a></p>
+                            <a href="#none">DETAIL VIEW</a>
                         </div>
                     </div>
                     <div class="img3">
                         <div class="imgtext">
                             <h3>네트워크</h3>
                             <p>주변환경을 생각하는 개발 소비자의 품격 있는 삶을 위한 주거문화 창달에 노력하고 있습니다.</p>
-                            <p><a href="#none">DETAIL VIEW</a></p>
+                            <a href="#none">DETAIL VIEW</a>
                         </div>
                     </div>
                     <div class="img4">
                         <div class="imgtext">
                             <h3>사회공헌</h3>
                             <p>주변환경을 생각하는 개발 소비자의 품격 있는 삶을 위한 주거문화 창달에 노력하고 있습니다.</p>
-                            <p><a href="#none">DETAIL VIEW</a></p>
+                            <a href="#none">DETAIL VIEW</a>
                         </div>
                     </div>
                 </div>
@@ -138,9 +185,9 @@
         <footer id="footer">
             <div class="row">
                 <div class="icon">
-                    <a href="#none"><i class="fas fa-dove"></i></a>
-                    <a href="#none"><i class="fab fa-facebook-square"></i></a>
-                    <a href="#none"><i class="fab fa-instagram"></i></a>
+                    <a href="#none"><i class="fas fa-dove"></i><span class="blind">트위터</span></a>
+                    <a href="#none"><i class="fab fa-facebook-square"></i><span class="blind">페이스북</span></a>
+                    <a href="#none"><i class="fab fa-instagram"></i><span class="blind">인스타그램</span></a>
                 </div>
                 <div class="info">
                     <ul>
@@ -158,7 +205,9 @@
                 </div>
             </div>
         </footer>
-
+        <div class="gotop">
+            <a href="#top">TOP</a>
+        </div>
 
     </div>
     
